Prevent page from moving left when scrollbar appears

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -60,3 +60,8 @@
  * @import "utilities/background-patterns";
  * @import "utilities/skew-transforms";
  */
+
+html {
+  /* https://stackoverflow.com/a/30293718/627729 */
+  padding-left: calc(100vw - 100%);
+}
